# ES4A4

./: LICENSE.md  README.md
.old/back/: pom.xml
.old/back/src/main/java/br/edu/ifsp/terraqueos/comentesobre/model/: Assunto.java  Countries.java
.old/front/: index.html
back/: comentesobre.mv.db
back/src/main/java/br/edu/ifsp/terraqueos/comentesobre/: ComenteSobreApplication.java
back/src/main/java/br/edu/ifsp/terraqueos/comentesobre/model/: Comentario.java
back/src/main/resources/: application.properties  data.sql
back/src/test/java/br/edu/ifsp/terraqueos/comentesobre/: ComentesobreApplicationTests.java
client/: package-lock.json
client/src/: global.css
client/src/pages/comente-sobre/: [slug].svelte  _layout.svelte  index.svelte
front/: forum.html  style.css
server/: pyproject.toml  requirements.txt
server/core/: models.py  serializers.py  tests.py  urls.py  views.py
server/core/migrations/: 0001_initial.py
server/project/: settings.py  urls.py
