[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
djangorestframework = "^3.13.1"
Django = "^4.0.5"
gunicorn = "^20.1.0"
django-extensions = "^3.1.5"
django-heroku = "^0.3.1"
django-cors-headers = "^3.13.0"

[tool.poetry.dev-dependencies]
django-extensions = "^3.1.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
